AM 04/11/05
- Fixed a bug in Configuration (the class was uncorrectly
  evaluating mixed integer-floating point expressions).

MJ 04/11/05
- Refreshed example.aggregation and related stuff. 
- Refreshed example.loadbalance and related stuff. 

MJ 02/11/05
- Fixed a bug in the Tarjan algorithm that detects strongly connected 
  components.

AM 30/10/05
- RangeSimulator, again. While testing, I discovered a race
  condition that could generate an IOException. Detected and
  ignored now. Also, refactored the code a bit.

GJ 30/10/05
- Small example package fix.

MJ 30/10/05
- I hope this is the last change that breaks exisiting config files:
  I replaced the "overlay.*" parameters by "network.*". Overlay was
  plainly misleading and since we broke so many things already, I chose not to
  complicate the code with handling obsolate names.

GJ 29/10/05
- Updated example package.
- Added example package documentation.

MJ 29/10/05
- Fixed some small bugs related to running multiple experiments. Now
  the initialization of the new network is done properly, and memory is
  released as early as possible when a new experiment is started.
  Now onKill is called also on protocols that implement it, when removing
  the old network.

AM 29/10/05
- Improved the RangeSimulator with a mechanism to kill the
  child process if the RangeSimulator is killed by an
  external signal.

AM 28/10/05
- Slightly changed the structure of RangeSimulator, to offer a
  feature (printing of time) that I was using in the previous
  version and I haven't re-implemented yet. 

AM 26/10/05
- Fixed the RangeSimulator
- Removed some unused IOException (and catch blocks) in 
  example.hot.InetObserver.

MJ 25/10/05
- Reverted back to System.out for logging, and instead added a way
  of redirecting stdout to a custom PrintStream class, that can
  process the output (property "simulation.stdout" can define a PrintStream
  class for Simulator).

AM 24/10/05