@@ -1,19 +1,18 @@
 # PEERSIM EXAMPLE 1
 
 random.seed 1234567890
-
 simulation.cycles 30
 
 control.shf peersim.cdsim.Shuffle
 
 network.size 50000
  
-protocol.lnk IdleProtocol
+protocol.lnk peersim.core.IdleProtocol
 
 protocol.avg example.aggregation.AverageFunction
 protocol.avg.linkable lnk
  
-init.rnd WireKOut
+init.rnd peersim.dynamics.WireKOut
 init.rnd.protocol lnk
 init.rnd.k 20
 
@@ -21,7 +20,7 @@ init.peak example.aggregation.PeakDistributionInitializer
 init.peak.value 10000
 init.peak.protocol avg
 
-init.lin LinearDistribution
+init.lin peersim.vector.LinearDistribution
 init.lin.protocol avg
 init.lin.max 100
 init.lin.min 1
