@@ -1,3 +1,7 @@
+GJ 06/11/05
+- AverageObserver and QuotaObserver fix.
+- Refreshed config files.
+
 AM 04/11/05
 - Fixed a bug in Configuration (the class was uncorrectly
   evaluating mixed integer-floating point expressions).
